--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:name=".constants.Statistical"
@@ -29,7 +29,7 @@
         <activity android:name=".prototype.ProtoChatListActivity" />
 
         <service
-            android:name=".service.BackgroundService"
+            android:name=".background.BackgroundService"
             android:enabled="true"
             android:exported="true" />
 
@@ -44,6 +44,10 @@
         <activity android:name=".view.activity.SignUpActivity" />
         <activity android:name=".view.activity.TabBarMainActivity" />
 
+        <service
+            android:name=".background.GpsService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
