--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,8 +43,12 @@
         <service
             android:name=".background.BackgroundChattingService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true"/>
 
+        <service
+            android:name=".background.ProfileCachingJobService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:exported="true"/>
 
         <activity android:name=".view.activity.MemberDetailViewActivity">
         </activity>
