--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.activity.SignInActivity"/>
+        <activity android:name=".view.activity.SignInActivity" />
         <activity android:name=".view.activity.SignUpActivity" />
         <activity
             android:name=".view.activity.TabBarMainActivity"
@@ -51,7 +51,7 @@
             android:exported="true"
             android:permission="android.permission.BIND_JOB_SERVICE" />
 
-        <activity android:name=".view.activity.MemberDetailViewActivity"></activity>
+        <activity android:name=".view.activity.MemberDetailViewActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -64,6 +64,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <activity android:name=".view.activity.ChattingActivity"></activity>
     </application>
 
 </manifest>
