--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.android.support:design:28.0.0'
+    implementation files('libs/gson-2.8.5.jar')
 }
