--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission
+        android:name="android.permission.MANAGE_DOCUMENTS"
+        tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -20,7 +24,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".view.activity.WelcomingActiviy">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,8 +33,7 @@
         </activity>
         <activity android:name=".view.activity.SignInActivity" />
         <activity android:name=".view.activity.SignUpActivity" />
-        <activity
-            android:name=".view.activity.TabBarMainActivity" />
+        <activity android:name=".view.activity.TabBarMainActivity" />
 
         <service
             android:name=".background.GpsService"
@@ -59,7 +61,12 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".view.activity.ChattingActivity"></activity>
+        <activity android:name=".view.activity.ChattingActivity" />
+        <activity android:name=".mypage.AddActivity" />
+        <activity android:name=".mypage.ChoiceCountryActivity" />
+        <activity android:name=".mypage.MainActivity" />
+        <activity android:name=".mypage.NextActivity" />
+        <activity android:name=".mypage.TempActivity"></activity>
     </application>
 
 </manifest>
