--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -32,10 +35,22 @@ dependencies {
         // excluding org.json which is provided by Android
         exclude group: 'org.json', module: 'json'
     }
+    //view model
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "android.arch.lifecycle:viewmodel:1.1.1"
+    //cardView
     implementation 'com.android.support:cardview-v7:28.0.0'
+    //recyclerView
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    //glide
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+    //google map
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
+    //design
     implementation 'com.android.support:design:28.0.0'
-    implementation files('libs/gson-2.8.5.jar')
+    //firebase
+    implementation 'com.google.firebase:firebase-core:16.0.6'
+    implementation 'com.google.firebase:firebase-auth:16.1.0'
+    implementation 'com.google.firebase:firebase-database:16.0.5'
 }
+apply plugin: 'com.google.gms.google-services'
