update sing in and sign up

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,8 +55,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.google.firebase:firebase-storage:16.0.5'
     //facebook sign up
-    implementation 'com.facebook.android:facebook-android-sdk:4.39.0'
+//    implementation 'com.facebook.android:facebook-login:[4,5)'
     //google sign up
-    implementation 'com.google.android.gms:play-services-auth:16.0.0'
+//    implementation 'com.google.android.gms:play-services-auth:16.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
