--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".helper.ApplicationManagement"
@@ -23,7 +21,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".view.activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,6 +33,13 @@
         <activity android:name=".view.activity.SignInActivity" />
         <activity android:name=".view.activity.SignUpActivity" />
         <activity android:name=".view.activity.TabBarMainActivity" />
+        <activity android:name=".view.activity.MemberDetailViewActivity" />
+        <activity android:name=".view.activity.ChattingActivity" />
+        <activity android:name=".mypage.AddActivity" />
+        <activity android:name=".mypage.ChoiceCountryActivity" />
+        <activity android:name=".mypage.MainActivity" />
+        <activity android:name=".mypage.NextActivity" />
+        <activity android:name=".mypage.TempActivity" />
 
         <service
             android:name=".background.GpsService"
@@ -48,25 +54,10 @@
             android:exported="true"
             android:permission="android.permission.BIND_JOB_SERVICE" />
 
-        <activity android:name=".view.activity.MemberDetailViewActivity" />
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/.
-        -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".view.activity.ChattingActivity" />
-        <activity android:name=".mypage.AddActivity" />
-        <activity android:name=".mypage.ChoiceCountryActivity" />
-        <activity android:name=".mypage.MainActivity" />
-        <activity android:name=".mypage.NextActivity" />
-        <activity android:name=".mypage.TempActivity"></activity>
     </application>
 
 </manifest>
